# shapes

./: CMakeLists.txt
headers/: circle.h  intersection_data.h  mesh.h  path.h  rectangle.h
headers/base/: intersectable.h
sources/: circle.cpp  path.cpp  rectangle.cpp
sources/base/: intersectable.cpp
tests/: CMakeLists.txt  intersection_test.cpp  properties_test.cpp
